fix k rank for anchors, infra for train test split

--- a/EXPERIMENTS/diffsort.ipynb
+++ b/EXPERIMENTS/diffsort.ipynb
@@ -3,7 +3,7 @@
   {
    "cell_type": "code",
    "execution_count": 1,
-   "id": "fe065b33",
+   "id": "383f03db",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -33,7 +33,6 @@
     "        \n",
     "        query_rank = torch.clamp(soft_rank(self.anchors(query), direction=\"DESCENDING\", regularization_strength=.001), max=k)\n",
     "#         query_rank = soft_rank(self.anchors(query), direction=\"DESCENDING\")\n",
-    "#         print(query_rank)\n",
     "        \n",
     "        out = self.softmax(torch.matmul(query_rank, data_rank.T))\n",
     "        return out\n",
@@ -43,11 +42,11 @@
   {
    "cell_type": "code",
    "execution_count": 2,
-   "id": "7b112337",
+   "id": "825c3658",
    "metadata": {},
    "outputs": [],
    "source": [
-    "n = 10000\n",
+    "n = 20000\n",
     "D = 128\n",
     "num_queries = 3200\n",
     "num_anchors = 128\n",
@@ -58,7 +57,7 @@
   {
    "cell_type": "code",
    "execution_count": 3,
-   "id": "caaecf3d",
+   "id": "561d9e5d",
    "metadata": {
     "scrolled": true
    },
@@ -85,7 +84,7 @@
   {
    "cell_type": "code",
    "execution_count": 4,
-   "id": "7a602d6c",
+   "id": "15dd4bd5",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -98,7 +97,7 @@
   {
    "cell_type": "code",
    "execution_count": 5,
-   "id": "db0c7604",
+   "id": "e8c04c2c",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -107,8 +106,7 @@
     "\n",
     "def dataset_split(dataset, train_frac):\n",
     "    length = len(dataset)\n",
-    "\n",
-    "    # Use int to get the floor to favour allocation to the smaller valid and test sets    \n",
+    "   \n",
     "    train_length = int(length * train_frac)\n",
     "    valid_length = int((length - train_length) / 2)\n",
     "    test_length  = length - train_length - valid_length\n",
@@ -121,27 +119,22 @@
   {
    "cell_type": "code",
    "execution_count": 6,
-   "id": "223dcde0",
+   "id": "a098c8b4",
    "metadata": {},
    "outputs": [],
    "source": [
-    "batch_size=200\n",
+    "# Fits fine in mem\n",
+    "batch_size=3200\n",
     "train_split = .8 \n",
     "\n",
     "query_data = []\n",
     "for i in range(queries.shape[0]):\n",
     "    query_data.append([queries[i], true[i]])\n",
-    "# print(len(train_data))\n",
-    "# print(np.array(train_data).shape)\n",
-    "# db_datasets = dataset_split(db, train_split)\n",
+    "\n",
     "query_datasets = dataset_split(query_data, train_split)\n",
     "query_loader = torch.utils.data.DataLoader(dataset=query_datasets['train'], \n",
     "                                           batch_size=batch_size, \n",
     "                                           shuffle=True)\n",
-    "# t = [queries, true]\n",
-    "# print(torch.tensor(t))\n",
-    "# print(true.shape)\n",
-    "\n",
     "\n",
     "\n",
     "test_loader = torch.utils.data.DataLoader(dataset=query_datasets['test'], \n",
@@ -149,38 +142,175 @@
     "                                          shuffle=False)\n",
     "\n",
     "model = AnchorNet(num_anchors, D, k)\n",
-    "# # print(model.forward(db,queries).shape)\n",
-    "\n",
     "criterion = nn.CrossEntropyLoss()\n",
-    "optimizer = torch.optim.Adam(model.parameters(), lr=.001)  \n",
-    "\n",
-    "\n",
-    "\n",
-    "# DataLoader(db_datasets[\"train\"], batch_size=10000)\n",
-    "# DataLoader(db_datasets[\"train\"], batch_size=10000)\n",
-    "# DataLoader(db_datasets[\"train\"], batch_size=10000)\n",
-    "\n",
-    "# index_dp = DistPerm(num_anchors, k=k, dist='dot')\n",
-    "# index_dp.fit(db)\n",
-    "# dp_hashes = index_dp.add(db)\n",
-    "# found_dp = index_dp.search(queries, R)\n",
-    "# found_dp = found_dp.numpy()"
+    "optimizer = torch.optim.Adam(model.parameters(), lr=.001)  \n"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "4fcd0ecd",
+   "id": "dca65b26",
    "metadata": {
     "scrolled": true
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Epoch [1], Loss: 9.4589, recall_test: 0.4656\n",
+      "Epoch [2], Loss: 9.4561, recall_test: 0.4656\n",
+      "Epoch [3], Loss: 9.4539, recall_test: 0.4906\n",
+      "Epoch [4], Loss: 9.4478, recall_test: 0.4844\n",
+      "Epoch [5], Loss: 9.4424, recall_test: 0.4844\n",
+      "Epoch [6], Loss: 9.4368, recall_test: 0.4906\n",
+      "Epoch [7], Loss: 9.4317, recall_test: 0.4906\n",
+      "Epoch [8], Loss: 9.4301, recall_test: 0.5000\n",
+      "Epoch [9], Loss: 9.4298, recall_test: 0.5031\n",
+      "Epoch [10], Loss: 9.4259, recall_test: 0.5062\n",
+      "Epoch [11], Loss: 9.4219, recall_test: 0.5188\n",
+      "Epoch [12], Loss: 9.4209, recall_test: 0.5281\n",
+      "Epoch [13], Loss: 9.4141, recall_test: 0.5375\n",
+      "Epoch [14], Loss: 9.4087, recall_test: 0.5375\n",
+      "Epoch [15], Loss: 9.4069, recall_test: 0.5344\n",
+      "Epoch [16], Loss: 9.4076, recall_test: 0.5250\n",
+      "Epoch [17], Loss: 9.4085, recall_test: 0.5281\n",
+      "Epoch [18], Loss: 9.4002, recall_test: 0.5344\n",
+      "Epoch [19], Loss: 9.3956, recall_test: 0.5344\n",
+      "Epoch [20], Loss: 9.3935, recall_test: 0.5375\n",
+      "Epoch [21], Loss: 9.3879, recall_test: 0.5312\n",
+      "Epoch [22], Loss: 9.3884, recall_test: 0.5312\n",
+      "Epoch [23], Loss: 9.3871, recall_test: 0.5312\n",
+      "Epoch [24], Loss: 9.3878, recall_test: 0.5375\n",
+      "Epoch [25], Loss: 9.3859, recall_test: 0.5375\n",
+      "Epoch [26], Loss: 9.3862, recall_test: 0.5406\n",
+      "Epoch [27], Loss: 9.3800, recall_test: 0.5500\n",
+      "Epoch [28], Loss: 9.3777, recall_test: 0.5469\n",
+      "Epoch [29], Loss: 9.3762, recall_test: 0.5500\n",
+      "Epoch [30], Loss: 9.3741, recall_test: 0.5500\n",
+      "Epoch [31], Loss: 9.3715, recall_test: 0.5406\n",
+      "Epoch [32], Loss: 9.3747, recall_test: 0.5500\n",
+      "Epoch [33], Loss: 9.3704, recall_test: 0.5469\n",
+      "Epoch [34], Loss: 9.3693, recall_test: 0.5469\n",
+      "Epoch [35], Loss: 9.3692, recall_test: 0.5469\n",
+      "Epoch [36], Loss: 9.3671, recall_test: 0.5500\n",
+      "Epoch [37], Loss: 9.3636, recall_test: 0.5437\n",
+      "Epoch [38], Loss: 9.3644, recall_test: 0.5437\n",
+      "Epoch [39], Loss: 9.3650, recall_test: 0.5500\n",
+      "Epoch [40], Loss: 9.3585, recall_test: 0.5500\n",
+      "Epoch [41], Loss: 9.3564, recall_test: 0.5563\n",
+      "Epoch [42], Loss: 9.3550, recall_test: 0.5531\n",
+      "Epoch [43], Loss: 9.3513, recall_test: 0.5531\n",
+      "Epoch [44], Loss: 9.3506, recall_test: 0.5531\n",
+      "Epoch [45], Loss: 9.3473, recall_test: 0.5531\n",
+      "Epoch [46], Loss: 9.3454, recall_test: 0.5531\n",
+      "Epoch [47], Loss: 9.3467, recall_test: 0.5563\n",
+      "Epoch [48], Loss: 9.3465, recall_test: 0.5625\n",
+      "Epoch [49], Loss: 9.3430, recall_test: 0.5687\n",
+      "Epoch [50], Loss: 9.3397, recall_test: 0.5719\n",
+      "Epoch [51], Loss: 9.3391, recall_test: 0.5687\n",
+      "Epoch [52], Loss: 9.3406, recall_test: 0.5719\n",
+      "Epoch [53], Loss: 9.3411, recall_test: 0.5781\n",
+      "Epoch [54], Loss: 9.3385, recall_test: 0.5844\n",
+      "Epoch [55], Loss: 9.3377, recall_test: 0.5875\n",
+      "Epoch [56], Loss: 9.3325, recall_test: 0.5875\n",
+      "Epoch [57], Loss: 9.3334, recall_test: 0.5875\n",
+      "Epoch [58], Loss: 9.3336, recall_test: 0.5875\n",
+      "Epoch [59], Loss: 9.3351, recall_test: 0.5906\n",
+      "Epoch [60], Loss: 9.3363, recall_test: 0.5750\n",
+      "Epoch [61], Loss: 9.3407, recall_test: 0.5875\n",
+      "Epoch [62], Loss: 9.3371, recall_test: 0.5875\n",
+      "Epoch [63], Loss: 9.3385, recall_test: 0.5906\n",
+      "Epoch [64], Loss: 9.3392, recall_test: 0.6031\n",
+      "Epoch [65], Loss: 9.3358, recall_test: 0.6062\n",
+      "Epoch [66], Loss: 9.3336, recall_test: 0.6062\n",
+      "Epoch [67], Loss: 9.3308, recall_test: 0.5969\n",
+      "Epoch [68], Loss: 9.3306, recall_test: 0.6000\n",
+      "Epoch [69], Loss: 9.3265, recall_test: 0.6000\n",
+      "Epoch [70], Loss: 9.3250, recall_test: 0.6031\n",
+      "Epoch [71], Loss: 9.3255, recall_test: 0.6031\n",
+      "Epoch [72], Loss: 9.3213, recall_test: 0.6062\n",
+      "Epoch [73], Loss: 9.3189, recall_test: 0.5969\n",
+      "Epoch [74], Loss: 9.3189, recall_test: 0.6031\n",
+      "Epoch [75], Loss: 9.3180, recall_test: 0.6125\n",
+      "Epoch [76], Loss: 9.3187, recall_test: 0.6094\n",
+      "Epoch [77], Loss: 9.3200, recall_test: 0.6125\n",
+      "Epoch [78], Loss: 9.3160, recall_test: 0.6062\n",
+      "Epoch [79], Loss: 9.3145, recall_test: 0.6156\n",
+      "Epoch [80], Loss: 9.3129, recall_test: 0.6156\n",
+      "Epoch [81], Loss: 9.3099, recall_test: 0.6188\n",
+      "Epoch [82], Loss: 9.3103, recall_test: 0.6188\n",
+      "Epoch [83], Loss: 9.3106, recall_test: 0.6250\n",
+      "Epoch [84], Loss: 9.3093, recall_test: 0.6312\n",
+      "Epoch [85], Loss: 9.3079, recall_test: 0.6344\n",
+      "Epoch [86], Loss: 9.3079, recall_test: 0.6344\n",
+      "Epoch [87], Loss: 9.3084, recall_test: 0.6312\n",
+      "Epoch [88], Loss: 9.3083, recall_test: 0.6312\n",
+      "Epoch [89], Loss: 9.3087, recall_test: 0.6281\n",
+      "Epoch [90], Loss: 9.3076, recall_test: 0.6281\n",
+      "Epoch [91], Loss: 9.3068, recall_test: 0.6281\n",
+      "Epoch [92], Loss: 9.3043, recall_test: 0.6250\n",
+      "Epoch [93], Loss: 9.3056, recall_test: 0.6250\n",
+      "Epoch [94], Loss: 9.3040, recall_test: 0.6281\n",
+      "Epoch [95], Loss: 9.3060, recall_test: 0.6250\n",
+      "Epoch [96], Loss: 9.3060, recall_test: 0.6250\n",
+      "Epoch [97], Loss: 9.3066, recall_test: 0.6219\n",
+      "Epoch [98], Loss: 9.3063, recall_test: 0.6281\n",
+      "Epoch [99], Loss: 9.3028, recall_test: 0.6312\n",
+      "Epoch [100], Loss: 9.3010, recall_test: 0.6344\n",
+      "Epoch [101], Loss: 9.3005, recall_test: 0.6375\n",
+      "Epoch [102], Loss: 9.3001, recall_test: 0.6406\n",
+      "Epoch [103], Loss: 9.2985, recall_test: 0.6375\n",
+      "Epoch [104], Loss: 9.2996, recall_test: 0.6438\n",
+      "Epoch [105], Loss: 9.2950, recall_test: 0.6469\n",
+      "Epoch [106], Loss: 9.2927, recall_test: 0.6500\n",
+      "Epoch [107], Loss: 9.2921, recall_test: 0.6438\n",
+      "Epoch [108], Loss: 9.2952, recall_test: 0.6469\n",
+      "Epoch [109], Loss: 9.2971, recall_test: 0.6469\n",
+      "Epoch [110], Loss: 9.2963, recall_test: 0.6438\n",
+      "Epoch [111], Loss: 9.2968, recall_test: 0.6469\n",
+      "Epoch [112], Loss: 9.2963, recall_test: 0.6500\n",
+      "Epoch [113], Loss: 9.2954, recall_test: 0.6469\n",
+      "Epoch [114], Loss: 9.2939, recall_test: 0.6531\n",
+      "Epoch [115], Loss: 9.2912, recall_test: 0.6562\n",
+      "Epoch [116], Loss: 9.2902, recall_test: 0.6562\n",
+      "Epoch [117], Loss: 9.2880, recall_test: 0.6531\n",
+      "Epoch [118], Loss: 9.2881, recall_test: 0.6531\n",
+      "Epoch [119], Loss: 9.2870, recall_test: 0.6500\n",
+      "Epoch [120], Loss: 9.2883, recall_test: 0.6469\n",
+      "Epoch [121], Loss: 9.2872, recall_test: 0.6500\n",
+      "Epoch [122], Loss: 9.2879, recall_test: 0.6500\n",
+      "Epoch [123], Loss: 9.2881, recall_test: 0.6500\n",
+      "Epoch [124], Loss: 9.2838, recall_test: 0.6469\n",
+      "Epoch [125], Loss: 9.2830, recall_test: 0.6562\n",
+      "Epoch [126], Loss: 9.2816, recall_test: 0.6531\n",
+      "Epoch [127], Loss: 9.2841, recall_test: 0.6531\n",
+      "Epoch [128], Loss: 9.2826, recall_test: 0.6562\n",
+      "Epoch [129], Loss: 9.2829, recall_test: 0.6531\n",
+      "Epoch [130], Loss: 9.2820, recall_test: 0.6531\n",
+      "Epoch [131], Loss: 9.2826, recall_test: 0.6531\n",
+      "Epoch [132], Loss: 9.2829, recall_test: 0.6562\n",
+      "Epoch [133], Loss: 9.2805, recall_test: 0.6562\n",
+      "Epoch [134], Loss: 9.2811, recall_test: 0.6500\n",
+      "Epoch [135], Loss: 9.2788, recall_test: 0.6469\n",
+      "Epoch [136], Loss: 9.2785, recall_test: 0.6500\n",
+      "Epoch [137], Loss: 9.2786, recall_test: 0.6500\n",
+      "Epoch [138], Loss: 9.2784, recall_test: 0.6531\n",
+      "Epoch [139], Loss: 9.2786, recall_test: 0.6500\n",
+      "Epoch [140], Loss: 9.2766, recall_test: 0.6594\n",
+      "Epoch [141], Loss: 9.2780, recall_test: 0.6531\n",
+      "Epoch [142], Loss: 9.2782, recall_test: 0.6531\n",
+      "Epoch [143], Loss: 9.2757, recall_test: 0.6469\n",
+      "Epoch [144], Loss: 9.2728, recall_test: 0.6438\n",
+      "Epoch [145], Loss: 9.2717, recall_test: 0.6469\n",
+      "Epoch [146], Loss: 9.2686, recall_test: 0.6531\n",
+      "Epoch [147], Loss: 9.2654, recall_test: 0.6594\n"
+     ]
+    }
+   ],
    "source": [
     "for epoch in range(1000):\n",
     "    for i, (q, l) in enumerate(query_loader):  \n",
-    "#         print(q.shape)\n",
-    "#         print(q)\n",
-    "#         break\n",
     "        outputs = model(db,queries)\n",
     "        loss = criterion(outputs, true.squeeze())\n",
     "\n",
@@ -188,7 +318,6 @@
     "        loss.backward()\n",
     "        optimizer.step()\n",
     "#     print('Loss: {:.4f}'.format(loss.item()))\n",
-    "#     break\n",
     "    if epoch % 1 == 0:\n",
     "        with torch.no_grad():\n",
     "            correct = 0\n",
@@ -207,35 +336,6 @@
     "# # Save the model checkpoint\n",
     "# torch.save(model.state_dict(), 'model.ckpt')"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "2dab65af",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "lin_weights = model.anchors.state_dict()['weight']\n",
-    "print(lin_weights.shape)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "501affaf",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "print(soft_rank(model.anchors(queries), regularization_strength=.001))"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "e4a66923",
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
