--- a/EXPERIMENTS/diffsort.ipynb
+++ b/EXPERIMENTS/diffsort.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 86,
    "id": "6ddb0015",
    "metadata": {},
    "outputs": [
@@ -24,9 +24,19 @@
     "from data_classes import BERTDataset\n",
     "from dist_perm import DistPerm\n",
     "import utils\n",
-    "from pytorch_ops import soft_rank\n",
+    "import pytorch_ops\n",
+    "# import torchsort\n",
     "from sklearn.neighbors import NearestNeighbors\n",
     "import numpy as np\n",
+    "\n",
+    "device = torch.device('cuda' if torch.cuda.is_available() else 'cpu')\n",
+    "print(device)\n",
+    "\n",
+    "def rank(array):\n",
+    "    if torch.cuda.is_available():\n",
+    "        return pytorch_ops.soft_rank(array.cpu(), direction=\"DESCENDING\", regularization_strength=.001).cuda()\n",
+    "#     else:\n",
+    "#         return torchsort.soft_rank(-1 * array, regularization_strength=.001)\n",
     "\n",
     "class AnchorNet(nn.Module):\n",
     "    def __init__(self, num_anchs, d, k):\n",
@@ -36,39 +46,40 @@
     "        self.k = k\n",
     "\n",
     "    def forward(self, data, query):\n",
-    "        data_rank = torch.clamp(soft_rank(self.anchors(data), direction=\"DESCENDING\", regularization_strength=.001), max=k)\n",
-    "        query_rank = torch.clamp(soft_rank(self.anchors(query), direction=\"DESCENDING\", regularization_strength=.001), max=k)\n",
+    "        data_rank = torch.clamp(rank(self.anchors(data)), max=k)\n",
+    "        query_rank = torch.clamp(rank(self.anchors(query)), max=k)\n",
     "        out = self.softmax(torch.matmul(query_rank, data_rank.T))\n",
     "        return out\n",
-    "\n",
-    "device = torch.device('cuda' if torch.cuda.is_available() else 'cpu')\n",
-    "print(device)"
+    "\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 52,
+   "execution_count": 87,
    "id": "9db55421",
    "metadata": {},
    "outputs": [],
    "source": [
+    "# Hyperparams\n",
+    "\n",
     "n = 100000\n",
     "D = 128\n",
     "num_queries = 3200\n",
     "num_anchors = 128\n",
-    "R = 100\n",
     "k = 12"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 53,
+   "execution_count": 88,
    "id": "2c0c7076",
    "metadata": {
     "scrolled": true
    },
    "outputs": [],
    "source": [
+    "# Load data\n",
+    "\n",
     "file_q = './Q.pt'\n",
     "file_db = './D.pt'\n",
     "data_source = BERTDataset(file_q, file_db, n)\n",
@@ -80,11 +91,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 54,
+   "execution_count": 89,
    "id": "62bcac88",
    "metadata": {},
    "outputs": [],
    "source": [
+    "# Helper function for splitting into datasets \n",
+    "\n",
     "import torch, itertools\n",
     "from torch.utils.data import TensorDataset, random_split, DataLoader\n",
     "from sklearn.model_selection import train_test_split\n",
@@ -97,18 +110,19 @@
     "    test_length  = length - train_length - valid_length\n",
     "\n",
     "    sets = random_split(dataset, (train_length, valid_length, test_length))\n",
-    "    dataset = {name: set for name, set in zip(('train', 'valid', 'test'), sets)}\n",
+    "    dataset = {name: set for name, set in zip(('train', 'val', 'test'), sets)}\n",
     "    return dataset\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 55,
+   "execution_count": 90,
    "id": "e6ebd114",
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Generate the nearest neighbors for each batch of docs \n",
+    "# Generate the nearest neighbors for each batch of docs. Then combine with the queries \n",
+    "# to produce the dataloader for queries containing data and label\n",
     "# d = docs\n",
     "# ret = train/test\n",
     "def return_loader(d, ret):\n",
@@ -120,6 +134,8 @@
     "        q = next(iter(query_data_loader))\n",
     "    elif ret=='test':\n",
     "        q = next(iter(query_data_test_loader))\n",
+    "    elif ret=='val':\n",
+    "        q = next(iter(query_data_val_loader))\n",
     "#   Get the true nearest neighbors\n",
     "    true = torch.tensor(index_l2.kneighbors(q, n_neighbors=1)[1])\n",
     "    query_data = []\n",
@@ -128,14 +144,14 @@
     "    test_set = dataset_split(query_data, 1)\n",
     "#   Return data as a dataloader\n",
     "    data = torch.utils.data.DataLoader(dataset=test_set['train'], \n",
-    "                                           batch_size=batch_size, \n",
+    "                                           batch_size=800, \n",
     "                                           shuffle=False)\n",
     "    return data"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 56,
+   "execution_count": 91,
    "id": "4d2e9ce4",
    "metadata": {},
    "outputs": [],
@@ -151,30 +167,38 @@
     "# The fixed train queries\n",
     "query_data_loader = torch.utils.data.DataLoader(dataset=query_datasets['train'], \n",
     "                                           batch_size=batch_size, \n",
-    "                                           shuffle=True)\n",
+    "                                           shuffle=False)\n",
     "\n",
     "# The fixed test queries \n",
     "query_data_test_loader = torch.utils.data.DataLoader(dataset=query_datasets['test'], \n",
     "                                          batch_size=batch_size, \n",
     "                                          shuffle=False)\n",
     "\n",
+    "# The fixed val queries \n",
+    "query_data_val_loader = torch.utils.data.DataLoader(dataset=query_datasets['val'], \n",
+    "                                          batch_size=batch_size, \n",
+    "                                          shuffle=False)\n",
+    "\n",
     "# The train docs\n",
     "docs_loader = torch.utils.data.DataLoader(dataset=doc_datasets['train'], \n",
-    "                                           batch_size=10000, \n",
-    "                                           shuffle=True)\n",
+    "                                           batch_size=5000, \n",
+    "                                           shuffle=False)\n",
     "\n",
     "# The test docs\n",
     "docs_test_loader = torch.utils.data.DataLoader(dataset=doc_datasets['test'], \n",
-    "                                           batch_size=10000, \n",
+    "                                           batch_size=5000, \n",
     "                                           shuffle=False)\n",
     "\n",
+    "docs_val_loader = torch.utils.data.DataLoader(dataset=doc_datasets['val'], \n",
+    "                                           batch_size=5000, \n",
+    "                                           shuffle=False)\n",
     "\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 57,
-   "id": "1453ee0c",
+   "execution_count": 92,
+   "id": "fd426a0f",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -186,25 +210,35 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 58,
+   "execution_count": 93,
    "id": "46ad9f37",
    "metadata": {},
    "outputs": [
     {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Test Loss: 8.8726, recall_test: 0.3469\n"
+     "ename": "AssertionError",
+     "evalue": "Torch not compiled with CUDA enabled",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mAssertionError\u001b[0m                            Traceback (most recent call last)",
+      "\u001b[0;32m<ipython-input-93-4f8f20b42dd9>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[1;32m     12\u001b[0m             \u001b[0mq\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mq\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mto\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mdevice\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     13\u001b[0m             \u001b[0ml\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0ml\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mto\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mdevice\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m---> 14\u001b[0;31m             \u001b[0moutputs\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mmodel\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0md\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0mq\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m     15\u001b[0m             \u001b[0mtest_loss\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mcriterion\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0moutputs\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0ml\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0msqueeze\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     16\u001b[0m \u001b[0;31m#           Recall: TP / (TP + TN)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;32m~/.conda/envs/research/lib/python3.6/site-packages/torch/nn/modules/module.py\u001b[0m in \u001b[0;36m_call_impl\u001b[0;34m(self, *input, **kwargs)\u001b[0m\n\u001b[1;32m   1049\u001b[0m         if not (self._backward_hooks or self._forward_hooks or self._forward_pre_hooks or _global_backward_hooks\n\u001b[1;32m   1050\u001b[0m                 or _global_forward_hooks or _global_forward_pre_hooks):\n\u001b[0;32m-> 1051\u001b[0;31m             \u001b[0;32mreturn\u001b[0m \u001b[0mforward_call\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m*\u001b[0m\u001b[0minput\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;34m**\u001b[0m\u001b[0mkwargs\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m   1052\u001b[0m         \u001b[0;31m# Do not call functions when jit is used\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m   1053\u001b[0m         \u001b[0mfull_backward_hooks\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mnon_full_backward_hooks\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0;34m[\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;34m[\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;32m<ipython-input-86-c2e85cb817de>\u001b[0m in \u001b[0;36mforward\u001b[0;34m(self, data, query)\u001b[0m\n\u001b[1;32m     30\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     31\u001b[0m     \u001b[0;32mdef\u001b[0m \u001b[0mforward\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mself\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mdata\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mquery\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m---> 32\u001b[0;31m         \u001b[0mdata_rank\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mtorch\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mclamp\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mrank\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mself\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0manchors\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mdata\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mmax\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0mk\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m     33\u001b[0m         \u001b[0mquery_rank\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mtorch\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mclamp\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mrank\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mself\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0manchors\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mquery\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mmax\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0mk\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     34\u001b[0m         \u001b[0mout\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mself\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0msoftmax\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mtorch\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mmatmul\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mquery_rank\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mdata_rank\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mT\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;32m<ipython-input-86-c2e85cb817de>\u001b[0m in \u001b[0;36mrank\u001b[0;34m(array)\u001b[0m\n\u001b[1;32m     18\u001b[0m \u001b[0;32mdef\u001b[0m \u001b[0mrank\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0marray\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     19\u001b[0m \u001b[0;31m#     if device == 'cpu':\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m---> 20\u001b[0;31m     \u001b[0;32mreturn\u001b[0m \u001b[0mpytorch_ops\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0msoft_rank\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0marray\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mcpu\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mdirection\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0;34m\"DESCENDING\"\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mregularization_strength\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0;36m.001\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mcuda\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m     21\u001b[0m \u001b[0;31m#     else:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     22\u001b[0m \u001b[0;31m#         return torchsort.soft_rank(-1 * array, regularization_strength=.001)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;32m~/.conda/envs/research/lib/python3.6/site-packages/torch/cuda/__init__.py\u001b[0m in \u001b[0;36m_lazy_init\u001b[0;34m()\u001b[0m\n\u001b[1;32m    164\u001b[0m                 \"multiprocessing, you must use the 'spawn' start method\")\n\u001b[1;32m    165\u001b[0m         \u001b[0;32mif\u001b[0m \u001b[0;32mnot\u001b[0m \u001b[0mhasattr\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mtorch\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0m_C\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;34m'_cuda_getDeviceCount'\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m--> 166\u001b[0;31m             \u001b[0;32mraise\u001b[0m \u001b[0mAssertionError\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m\"Torch not compiled with CUDA enabled\"\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m    167\u001b[0m         \u001b[0;32mif\u001b[0m \u001b[0m_cudart\u001b[0m \u001b[0;32mis\u001b[0m \u001b[0;32mNone\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    168\u001b[0m             raise AssertionError(\n",
+      "\u001b[0;31mAssertionError\u001b[0m: Torch not compiled with CUDA enabled"
      ]
     }
    ],
    "source": [
+    "# Get the initial performance of random anchors \n",
+    "\n",
     "with torch.no_grad():\n",
     "    correct = 0\n",
     "    total = 0\n",
-    "    for d in docs_test_loader:\n",
+    "    for d in docs_val_loader:\n",
     "    # for d in docs_loader:\n",
-    "        test_loader = return_loader(d, ret='test')\n",
+    "        test_loader = return_loader(d, ret='val')\n",
     "        d = d.to(device)\n",
     "        for q, l in test_loader:\n",
     "#             print(q)\n",
