--- a/EXPERIMENTS/diffsort.ipynb
+++ b/EXPERIMENTS/diffsort.ipynb
@@ -25,35 +25,41 @@
     "from dist_perm import DistPerm\n",
     "import utils\n",
     "import pytorch_ops\n",
-    "# import torchsort\n",
+    "import torchsort\n",
     "from sklearn.neighbors import NearestNeighbors\n",
     "import numpy as np\n",
     "\n",
-    "device = torch.device('cuda' if torch.cuda.is_available() else 'cpu')\n",
-    "print(device)\n",
-    "\n",
-    "def rank(array):\n",
-    "    if not torch.cuda.is_available():\n",
-    "        return pytorch_ops.soft_rank(array.cpu(), direction=\"DESCENDING\", regularization_strength=.00001)\n",
-    "    # else:\n",
-    "        # return torchsort.soft_rank(-1 * array, regularization_strength=.00001)\n",
+    "def soft_rank(array):\n",
+    "  #  return pytorch_ops.soft_rank(array.cpu(), direction=\"DESCENDING\", regularization_strength=.001).cuda()\n",
+    "   return torchsort.soft_rank(-1 * array, regularization_strength=.000001)\n",
     "\n",
     "class AnchorNet(nn.Module):\n",
-    "    def __init__(self, num_anchs, d, k):\n",
+    "    def __init__(self, num_anchs, d, k, hidden=128, hidden2=128, out=128):\n",
     "        super(AnchorNet, self).__init__()\n",
-    "        self.anchors = nn.Linear(d, num_anchs)\n",
-    "        self.softmax = nn.Softmax(dim=1)\n",
+    "        self.transform = nn.Sequential(\n",
+    "          # nn.Linear(d, hidden),\n",
+    "          # nn.ReLU(),\n",
+    "          # nn.Linear(hidden, hidden2),\n",
+    "          # nn.ReLU(),\n",
+    "          # nn.Linear(hidden, hidden2),\n",
+    "          # nn.Linear(hidden2, out)\n",
+    "        )\n",
+    "        self.anchors = nn.Linear(out, num_anchs)\n",
     "        self.k = k\n",
     "\n",
     "    def forward(self, data, query):\n",
-    "        data_rank = torch.clamp(rank(self.anchors(data)), max=k)\n",
-    "        query_rank = torch.clamp(rank(self.anchors(query)), max=k)\n",
-    "        out = self.softmax(torch.matmul(query_rank, data_rank.T))\n",
+    "        # data_out = self.transform(data)\n",
+    "        # query_out = self.transform(query)\n",
+    "        # data_rank = torch.clamp(soft_rank(self.anchors(data_out)), max=k)\n",
+    "        # query_rank = torch.clamp(soft_rank(self.anchors(query_out)), max=k)\n",
+    "        data_rank = soft_rank(self.anchors(data))\n",
+    "        query_rank = soft_rank(self.anchors(query))\n",
+    "        out = torch.matmul(query_rank, data_rank.T)\n",
     "        return out\n",
     "\n",
     "    def evaluate(self, data, query):\n",
-    "        q_dist = self.anchors(query)\n",
-    "        d_dist = self.anchors(data)\n",
+    "        q_dist = self.anchors(self.transform(query))\n",
+    "        d_dist = self.anchors(self.transform(data))\n",
     "\n",
     "        query_ranks = self.k*torch.ones(q_dist.shape, dtype=torch.float)\n",
     "        data_ranks = self.k*torch.ones(d_dist.shape, dtype=torch.float)\n",
@@ -69,7 +75,9 @@
     "        db_dists = torch.cdist(data_ranks, query_ranks, p=1).float()\n",
     "        closest_idx = torch.topk(db_dists, 10, dim=0, largest=False)\n",
     "        return closest_idx[1].transpose(0,1), query_ranks, closest_idx[0]\n",
-    "\n"
+    "\n",
+    "device = torch.device('cuda' if torch.cuda.is_available() else 'cpu')\n",
+    "print(device)"
    ]
   },
   {
@@ -79,13 +87,12 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Hyperparams\n",
-    "\n",
-    "n = 100000\n",
+    "n = 200000\n",
     "D = 128\n",
     "num_queries = 3200\n",
     "num_anchors = 128\n",
-    "k = 12"
+    "R = 100\n",
+    "k = 16"
    ]
   },
   {
@@ -97,8 +104,6 @@
    },
    "outputs": [],
    "source": [
-    "# Load data\n",
-    "\n",
     "file_q = './Q.pt'\n",
     "file_db = './D.pt'\n",
     "data_source = BERTDataset(file_q, file_db, n)\n",
@@ -140,8 +145,53 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Generate the nearest neighbors for each batch of docs. Then combine with the queries \n",
-    "# to produce the dataloader for queries containing data and label\n",
+    "# Fits fine in mem\n",
+    "batch_size=3200\n",
+    "train_split = .8\n",
+    "\n",
+    "query_datasets = dataset_split(quers, train_split)\n",
+    "# doc_datasets = dataset_split(db, train_split)\n",
+    "doc_datasets = dataset_split(db, train_split)\n",
+    "\n",
+    "# The fixed train queries\n",
+    "query_data_loader = torch.utils.data.DataLoader(dataset=query_datasets['train'], \n",
+    "                                           batch_size=batch_size, \n",
+    "                                           shuffle=False)\n",
+    "\n",
+    "# The fixed test queries \n",
+    "query_data_test_loader = torch.utils.data.DataLoader(dataset=query_datasets['test'], \n",
+    "                                          batch_size=batch_size, \n",
+    "                                          shuffle=False)\n",
+    "\n",
+    "# The fixed val queries \n",
+    "query_data_val_loader = torch.utils.data.DataLoader(dataset=query_datasets['val'], \n",
+    "                                          batch_size=batch_size, \n",
+    "                                          shuffle=False)\n",
+    "\n",
+    "# The train docs\n",
+    "docs_loader = torch.utils.data.DataLoader(dataset=doc_datasets['train'], \n",
+    "                                           batch_size=5000, \n",
+    "                                           shuffle=False)\n",
+    "\n",
+    "# The test docs\n",
+    "docs_test_loader = torch.utils.data.DataLoader(dataset=doc_datasets['test'], \n",
+    "                                           batch_size=5000, \n",
+    "                                           shuffle=False)\n",
+    "\n",
+    "docs_val_loader = torch.utils.data.DataLoader(dataset=doc_datasets['val'], \n",
+    "                                           batch_size=5000, \n",
+    "                                           shuffle=False)\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "id": "4d2e9ce4",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Generate the nearest neighbors for each batch of docs \n",
     "# d = docs\n",
     "# ret = train/test\n",
     "def return_loader(d, ret):\n",
@@ -170,52 +220,6 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
-   "id": "4d2e9ce4",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# Fits fine in mem\n",
-    "batch_size=3200\n",
-    "train_split = .8\n",
-    "\n",
-    "query_datasets = dataset_split(quers, train_split)\n",
-    "# doc_datasets = dataset_split(db, train_split)\n",
-    "doc_datasets = dataset_split(db, train_split)\n",
-    "\n",
-    "# The fixed train queries\n",
-    "query_data_loader = torch.utils.data.DataLoader(dataset=query_datasets['train'], \n",
-    "                                           batch_size=batch_size, \n",
-    "                                           shuffle=False)\n",
-    "\n",
-    "# The fixed test queries \n",
-    "query_data_test_loader = torch.utils.data.DataLoader(dataset=query_datasets['test'], \n",
-    "                                          batch_size=batch_size, \n",
-    "                                          shuffle=False)\n",
-    "\n",
-    "# The fixed val queries \n",
-    "query_data_val_loader = torch.utils.data.DataLoader(dataset=query_datasets['val'], \n",
-    "                                          batch_size=batch_size, \n",
-    "                                          shuffle=False)\n",
-    "\n",
-    "# The train docs\n",
-    "docs_loader = torch.utils.data.DataLoader(dataset=doc_datasets['train'], \n",
-    "                                           batch_size=5000, \n",
-    "                                           shuffle=True)\n",
-    "\n",
-    "# The test docs\n",
-    "docs_test_loader = torch.utils.data.DataLoader(dataset=doc_datasets['test'], \n",
-    "                                           batch_size=5000, \n",
-    "                                           shuffle=False)\n",
-    "\n",
-    "docs_val_loader = torch.utils.data.DataLoader(dataset=doc_datasets['val'], \n",
-    "                                           batch_size=5000, \n",
-    "                                           shuffle=False)\n",
-    "\n"
-   ]
-  },
-  {
-   "cell_type": "code",
    "execution_count": 7,
    "id": "f749027f",
    "metadata": {},
@@ -223,7 +227,7 @@
    "source": [
     "model = AnchorNet(num_anchors, D, k).to(device)\n",
     "criterion = nn.CrossEntropyLoss()\n",
-    "lr=.0005\n",
+    "lr=.0001\n",
     "optimizer = torch.optim.Adam(model.parameters(), lr=lr, weight_decay=0.001)  "
    ]
   },
@@ -273,7 +277,7 @@
    "outputs": [],
    "source": [
     "# train\n",
-    "for epoch in range(1000):\n",
+    "for epoch in range(500):\n",
     "#   Train step: get batch of train documents, then generate the dataloader containing \n",
     "#   the train queries and the correct data labels\n",
     "    train_correct = 0\n",
@@ -335,9 +339,9 @@
     "            print ('Epoch [{}], Loss: {:.4f}, Test Loss: {:.4f}, recall_train: {:.4f}, recall_test: {:.4f} recall_val: {:.4f}'\n",
     "                    .format(epoch+1, loss.item(), test_loss.item(), train_correct / train_total, correct / total, correct_val / total_val))\n",
     "\n",
-    "# # Save the model checkpoint\n",
-    "    # if epoch % 20 == 0:\n",
-    "    #   torch.save(model.state_dict(), \"/content/gdrive/MyDrive/ckpt/model_epoch_{}_anchor_{}_k_{}_lr_{}.pt\".format(epoch, num_anchors, k, lr))"
+    "# # # Save the model checkpoint\n",
+    "#     if epoch % 20 == 0:\n",
+    "#       torch.save(model.state_dict(), \"/content/gdrive/MyDrive/ckpt/model_epoch_{}_anchor_{}_k_{}_lr_{}.pt\".format(epoch, num_anchors, k, lr))"
    ]
   },
   {
